# spending-tracker

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE
.github/workflows/: ci.yml
.sqlx/: query-3e22e3314bbd84057e42a1a7ee519023728539a5ad441373e7574c5a58e1cf20.json  query-3ed2e954f7c8a87eee184a2d81ba405317939d428426c494748fad56d9cd92b1.json  query-a6ace45e0d464f1785f38c9b0bc273c8197ed0d08f18322ab201bf68714f67ed.json
migrations/: 001_create_users.sql  002_create_categories.sql  003_create_spending_entries.sql
scripts/: README.md  setup_db.sh
src/: handlers.rs  lib.rs  main.rs  models.rs  repositories.rs  services.rs  validation.rs
src/handlers/: auth_handlers.rs  spending_handlers.rs
src/middleware/: auth_middleware.rs
src/models/: auth.rs  category.rs  filters.rs  spending.rs  user.rs
src/repositories/: category_repository.rs  spending_repository.rs  user_repository.rs
src/services/: auth_service.rs  category_service.rs  spending_service.rs
tests/: integration_tests.rs
