[package]
name = "spending_tracker"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
axum = "0.8.8"
tokio = { version = "1.49.0", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono"] }

# Authentication
bcrypt = "0.18"
jsonwebtoken = "10"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde"] }
thiserror = "2"
anyhow = "1"

# Validation
validator = { version = "0.20", features = ["derive"] }
